outputs/tsp_aco-aco/2026-03-05_09-45-47/problem_iter13_response4.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 19
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa1 in position 177: invalid start byte
